tests/cases/meta/ok/pattern-macro-identity.ari
meta fn make_pattern(input: token_stream) -> token_stream {
}

meta fn make_ast_pattern(input: ast) -> ast {
}

enum MaybeI64 {
  None,
  Some(i64),
}

fn score(value: MaybeI64) -> i64 {
  return match value {
    make_pattern!(Some(inner)) => {
      inner
    }
    make_ast_pattern!(None) => {
      5
    }
  };
}

fn main() -> i64 {
  return score(Some(37)) + score(None());
}
