tests/cases/meta/errors/pattern-macro-unknown.ari
fn main() -> i64 {
  let value = 1;
  match value {
    missing_pattern!(Some(_)) => {
      return 0;
    }
    _ => {
      return 1;
    }
  }
}
